# grokking-deep-learning-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: rulinalg_vs_native.rs
examples/: chapter10.rs  chapter11.rs  chapter12.rs  chapter13.rs  chapter14.rs  chapter15.rs  chapter3.rs  chapter4.rs  chapter5.rs  chapter6.rs  chapter8.rs  chapter9.rs
src/: activations.rs  layers.rs  lib.rs  losses.rs  optimizers.rs  tensor.rs
