[package]
name = "grokking-deep-learning-rs"
version = "0.1.0"
authors = ["Suyash <suyash93@protonmail.com>"]
edition = "2018"

[dependencies]
datasets = { git = "https://github.com/suyash/datasets" }
rand = "0.6.4"
rulinalg = "0.4.2"

[dev-dependencies]
indicatif = "0.11.0"
paillier = { version = "0.2.0", default-features = false, features = ["usegmp", "keygen"] }
